fix-video-visibty

--- a/src/css/account/account.css
+++ b/src/css/account/account.css
@@ -422,6 +422,7 @@
   background: rgba(0, 0, 0, 0.25);
   padding: 0 0 0;
   height: 40px;
+  z-index: 6;
 }
 .plyr__controls {
   flex-wrap: wrap;
