--- a/src/css/video/video.css
+++ b/src/css/video/video.css
@@ -36,7 +36,7 @@
   object-fit: cover;
   position: relative;
 }
-.video-main__item-cover::after {
+.plyr__controls::after {
   position: absolute;
   content: '';
   display: block;
@@ -47,7 +47,10 @@
   background-size: cover;
   bottom: 0;
   left: 0;
-  z-index: 1;
+  /* z-index: 1; */
+}
+.video-main__item .plyr__controls .plyr__controls__item:first-child {
+  z-index: 6;
 }
 .video__author-info {
   position: absolute;
